spill #3 - Cropped the seal-glad img and fixed the correct position of the seal
- The image of the seal should be displayed on same position all the time now. Before it jumped below and created a new image before

--- a/assets/css/spill-3.css
+++ b/assets/css/spill-3.css
@@ -68,6 +68,10 @@ h4 {
   left: 40%;
 }
 
+.sel-glad {
+  bottom: 50%;
+}
+
 .seal-open-close {
   position: relative;
   width: 31rem;
